# gomotion

./: .gitignore  ChangeLog  Doxyfile  FAQ  Makefile.am  Makefile.local  README  README.Linux  README.MTConnect  README.Windows  acinclude.m4  autoconf.sh  build  configure.ac  distit.sh  gomotion.m4  mtconnect.m4  ulapi.m4
config/: README
doc/: Robocrane.md
drivers/: README
drivers/s626-0.3/: App626.h  README  s626core.h  s626demo.c  s626drv.c  s626mod.c
drivers/s626-0.3-multi/: Makefile  Modules.conf  s626api.h  s626core.c  s626demo.c  s626drv.c  s626mod.c  s626mod.h  s626test.c
drivers/s626-1.0/: README  README.LOCAL  s626api.h  s626demo.c  s626dm2b.c  s626drv.c  s626drv.h  s626mod.c  s626mod.h
etc/: Makefile.am  constrauto.ini  fanuc-lrmate-200id.ini  fanuc-m16iB20.ini  galil.ini  genhex.ini  genhexh.ini  genhexhbad.ini  genser.ini  gomotion.ini  gomotion.tool  gostepper.ini  gowin.ini  kr60.ini  motoman-sia20f.ini  puma.ini  roboch.ini  roboprinter.ini  roboprinter2.ini  scara.ini  smartmotor.ini  stephex.ini  telemax.ini  tetra.ini  tripoint.ini  triv.ini  usarsim.ini
lib/: Makefile.am
rtlib/: Makefile  SETUP
scripts/: BOXY.NC  FACE.NC  FINISH.NC  FISHHEAD.NC  G2.NGC  MOLDY.NC  POCKET.NC  ROUGH.NC  SEMI.NC  SHIM.NC  forever.tcl  g1.ngc  godseye.tcl  homeall.tcl  kitchen_sink.ngc  raster.nc  raster.tcl  testmtc.tcl  testvariates.tcl
src/: Makefile.am  ProfibusIOInterface.c  ProfibusIOInterface.h  canon.h  canon_go.cc  canon_pre.cc  cartfit.c  dcmotor.c  dcmotor.h  emu_galil.c  emu_smartmotor.c  ext_galil.c  ext_profi.c  ext_s626.c  ext_sim.c  ext_smartmotor.c  ext_stepper.c  ext_stub.c  extintf.h  fanuc_lrmate200id_kins.c  fanuc_lrmate200id_kins.h  fanuckins.c  fanuckins.h  genhexkins.c  genhexkins.h  genhextest.c  genserkins.c  genserkins.h  go.c  go.h  go_adapter.cpp  go_adapter.hpp  gocfg.c  gointerp.c  gointerp.h  gointerptest.c  goio.h  gokin.h  gokintest.c  golog.c  (+81 more)
testing/: testall  testcaj  testcirc  testhelix  testjog  testjointtime  testjstop  testklcq  testmot  testmtc.sh  testscale  testsm  testspiral  teststop  teststopcirc  testtime  testujoint  testvel  testworld
win32/: .cvsignore  README  gomotion.sln  gorun.bat
win32/emu_galil/: emu_galil.vcxproj
win32/gocfg/: gocfg.vcxproj
win32/gokintest/: gokintest.vcxproj
win32/golib/: golib.vcxproj
win32/gomain/: gomain.vcxproj
win32/gomain_smartmotor/: gomain_smartmotor.vcxproj
win32/gomainlib/: gomainlib.vcxproj
win32/gomathtest/: gomathtest.vcxproj
win32/gorun/: gorun.vcxproj
win32/gosh/: gosh.vcxproj
win32/gotk/: gotk.vcxproj
win32/igpsclient/: igpsclient.vcxproj
win32/igpsserver/: igpsserver.vcxproj
win32/taskloop/: taskloop.vcxproj
win32/tasksvr/: tasksvr.vcxproj
win32/toolmain/: toolmain.vcxproj
win32api/: install.bat
win32api/emu_galil/: emu_galil.vcxproj
win32api/gokintest/: gokintest.vcxproj
win32api/gosh/: gosh.vcxproj
win32api/gotk/: gotk.vcxproj
win32api/igpsserver/: igpsserver.vcxproj
win32api/tasksvr/: tasksvr.vcxproj
win32api/toolmain/: toolmain.vcxproj
