include_HEADERS = \
dcmotor.h \
extintf.h \
genhexkins.h \
genserkins.h \
go.h \
gointerp.h \
goio.h \
gokin.h \
golog.h \
gomath.h \
gomotion.h \
goprint.h \
gorcs.h \
gorcsutil.h \
gostepper.h \
gotraj.h \
gotypes.h \
goutil.h \
pid.h \
pumakins.h \
roboch.h \
servointf.h \
trajintf.h \
taskintf.h \
toolintf.h \
tripointkins.h \
trivkins.h \
variates.h

EXTRA_DIST = ext_stub.c ext_stepper.c ext_profi.c robocrane.c robocrane.h ProfibusIOInterface.c ProfibusIOInterface.h
