include_HEADERS = \
canon.h \
dcmotor.h \
extintf.h \
fanuc_lrmate200id_kins.h \
fanuckins.h \
genhexkins.h \
genserkins.h \
go.h \
gointerp.h \
goio.h \
gokin.h \
golog.h \
gomath.h \
gomotion.h \
goprint.h \
gorcs.h \
gorcsutil.h \
gostepper.h \
gotcltk.h \
gotraj.h \
gotypes.h \
goutil.h \
interplist.h \
pid.h \
pumakins.h \
roboch.h \
rs274ngc.h \
rs274ngc_return.h \
scarakins.h \
servointf.h \
spheristkins.h \
taskintf.h \
three21kins.h \
toolintf.h \
trajintf.h \
tripointkins.h \
trivkins.h \
variates.h

EXTRA_DIST = ext_stub.c ext_stepper.c ext_profi.c robocrane.c robocrane.h ProfibusIOInterface.c ProfibusIOInterface.h
